# backend/src/handler/post-gifts.handler.ts
@@ -1,14 +1,14 @@
 import { APIGatewayProxyHandler } from 'aws-lambda';
-import { RegisterGiftUsecase } from '../usecase/register-gift.usecase';
+import { RegisterGiftUsecase } from '../usecase/gift/register-gift.usecase';
 import { Gift } from '../domain/model/gift';
 
 export const PostGiftsHandler: APIGatewayProxyHandler = async (event) => {
   const usecase = new RegisterGiftUsecase();
 
   const request: {
-    broadcaster_id: string;
-    broadcaster_name: string;
-    stream_id: string;
+    broadcasterId: string;
+    broadcasterName: string;
+    streamId: string;
     gifts: {
       all: Gift[];
       diff: Gift[];
@@ -19,26 +19,26 @@ export const PostGiftsHandler: APIGatewayProxyHandler = async (event) => {
     broadcaster:
       request.gifts.all && request.gifts.all.length > 0
         ? {
-            id: request.broadcaster_id,
-            name: request.broadcaster_name,
+            id: request.broadcasterId,
+            name: request.broadcasterName,
           }
         : undefined,
     stream:
       request.gifts.all && request.gifts.all.length > 0
         ? {
-            broadcasterId: request.broadcaster_id,
-            id: request.stream_id,
+            broadcasterId: request.broadcasterId,
+            id: request.streamId,
           }
         : undefined,
     gifts:
       request.gifts.all && request.gifts.all.length > 0
         ? request.gifts.all.map((gift) => ({
             ...gift,
-            streamId: request.stream_id,
+            streamId: request.streamId,
           }))
         : request.gifts.diff.map((gift) => ({
             ...gift,
-            streamId: request.stream_id,
+            streamId: request.streamId,
           })),
   });
   return {
